--- a/app/src/main/res/layout/fragment_example6.xml
+++ b/app/src/main/res/layout/fragment_example6.xml
@@ -28,11 +28,19 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/guideline3"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@id/guideline4" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="@id/guideline3"
-        app:layout_constraintTop_toTopOf="@id/guideline4" />
+        app:layout_constraintTop_toBottomOf="@id/editText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
